--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     #wishList .num{display:inline-block; min-width:64px; margin-right:.35rem; color:#9bd3ff}
   }
 </style>
-<link rel="icon" href="logo.png">
+<link rel="icon" href="images/logo.png">
 </head>
 <body>
 <header>
@@ -66,8 +66,8 @@
 </header>
 <div id="stage">
     <picture>
-      <source media="(max-width:640px)" srcset="bg5mb.png">
-      <img id="bgLayer" src="bg5.png" alt="background" style="width:auto;">
+      <source media="(max-width:640px)" srcset="images/bg5mb.png">
+      <img id="bgLayer" src="images/bg5.png" alt="background" style="width:auto;">
     </picture>
 </div>
 <canvas id="scene"></canvas>
@@ -76,7 +76,7 @@
   <button id="tapLaunch" class="btn good">ปล่อยกระทง</button>
   <button id="tapMusic" class="btn">▶/⏸ เพลง</button>
 </div>
-<audio id="bgm" loop preload="auto" src="song.mp3" playsinline></audio>
+<audio id="bgm" loop preload="auto" src="audio/song.mp3" playsinline></audio>
 <div id="splash">
   <div class="card">
     <h1 style="margin:4px 0 0 0">แตะหน้าจอเพื่อเริ่มลอยกระทง</h1>
@@ -90,3 +90,5 @@
 <script src="main.js"></script>
 </body>
 </html>
+
+
