--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   .good{background:#104529; padding:10px 10px; border-color:#1b7d4e}
   .bad{background:#0b61d3; padding:10px 10px; border-color:#0e96ca}
   #stage{position:fixed;inset:calc(0px) 0 0 0; z-index:0; display:grid; place-items:center; overflow:hidden}
-#bgLayer{max-width:100%; max-height:100%; width:100%; height:100%; object-fit:cover; object-position:center bottom;}
+  #bgLayer{max-width:100%; max-height:100%; width:100%; height:100%; object-fit:cover; object-position:center bottom;}
   #scene{position:fixed;inset:0 0 0 0; z-index:1; width:100%; height:100%; touch-action:manipulation}
   #splash{position:fixed; inset:0; background:rgba(3,7,14,.85); display:grid; place-items:center; z-index:20}
   .card{background:#0e1726;border:2px solid #1a2a45;border-radius:12px;padding:22px 24px;box-shadow:0 10px 40px rgba(0,0,0,.4);width:min(92vw,560px);text-align:center}
@@ -31,19 +31,15 @@
   #toast.show{opacity:.96}
 
   @media (max-width:640px){
-    body{margin:0; height:100%; background:#061018; color:#ffffff;}
-    header{padding:20px 20px; position:fixed; z-index:10; inset:0 0 auto 0; background:linear-gradient(180deg, #061018 0%, #061827 100%)}
-    h1{font-size:22px; color: #ff0000 ;margin:0px 0px}
-    .row{display:flex; flex-wrap:wrap; gap:10px; align-items:center}
-    #stage{position:fixed;inset:calc(0px) 0 0 0; z-index:0; display:grid; place-items:center; overflow:hidden}
-    #bgLayer{max-width:100%; max-height:100%; width:100%; height:100%; object-fit:cover; object-position:center bottom;}
-    #scene{position:fixed;inset:0 0 0 0; z-index:1; width:100%; height:100%; touch-action:manipulation}
+    header{padding:10px 10px;}
+    #scene{ top:70px; height:calc(100% - 70px); } /* Adjusted top for mobile header */
+    h1{font-size:20px; margin:0px 0px}
+    .row{gap:8px;}
+    .pill{padding:8px 8px;}
+    .btn{padding:8px 8px; font-size:14PX}
+    input[type="text"]{min-width:150px; font-size:14PX}
     #mobileBar{display:flex}
-    .card{background:#0e1726; border:2px solid #1a2a45; border-radius:12px; padding:22px 24px; box-shadow:0 10px 40px rgba(0,0,0,.4); width:min(90vw,300px);text-align:center}
-    #splash.hide{opacity:0;pointer-events:none;transition:.35s}
-    input[type="text"]{background:#0f1c33; border:2px solid #284a7e; border-radius:12px; color:#e9f0ff; padding:10px 10px; min-width:270px; font-size:16PX}
-    #wishList{max-width:680px; font-size:1rem; list-style:none; padding-left:20px}
-    #wishList .num{display:inline-block; min-width:64px; margin-right:.35rem; color:#9bd3ff}
+    .card{width:min(90vw,300px);}
   }
 </style>
 <link rel="icon" href="images/logo.png">
@@ -53,14 +49,14 @@
   <div class="row">
     <h1>🎑 ลอยกระทงออนไลน์ · ปลอดบุหรี่</h1>
   </div>
-  <div class="row" style="margin-top:30px">
+  <div class="row" style="margin-top:10px">
     <span class="pill">ลอยแล้ว <strong id="statCount">0</strong> ใบ</span>
     <button id="tapMusic" class="btn">▶/⏸ เพลง</button>
-  </div>
-  <div class="row" style="margin-top:10px">
     <button id="resetBtn" class="btn bad">🧹 เริ่มนับใหม่</button>
     <button id="exportBtn" class="btn bad">⬇️ รายงาน CSV</button>
-    <input id="wish" class="btn good" type="text" placeholder="พิมพ์คำอธิษฐานของคุณ… แล้วกด >">
+  </div>
+  <div class="row" style="margin-top:10px">
+    <input id="wish" type="text" placeholder="พิมพ์คำอธิษฐานของคุณ…">
     <button id="launch" class="btn good">ปล่อย</button>
   </div>
 </header>
@@ -90,5 +86,3 @@
 <script src="main.js"></script>
 </body>
 </html>
-
-
