--- a/index.html
+++ b/index.html
@@ -93,14 +93,14 @@
 
         @media (max-width: 768px) {
             #background {
-                /* Corrected path to images/bg5mb.png */
+                /* FIX: Corrected path to images/bg5mb.png */
                 background-image: url('images/bg5mb.png');
             }
         }
 
         @media (min-width: 769px) {
             #background {
-                /* Corrected path to images/bg5.png */
+                /* FIX: Corrected path to images/bg5.png */
                 background-image: url('images/bg5.png');
             }
         }
@@ -303,6 +303,6 @@
     <audio id="bg-music" loop></audio>
 
     <!-- The critical fix: New cache-busting version to force reload -->
-    <script src="main.js?v=20231103_6"></script>
+    <script src="main.js?v=20231103_8"></script>
 </body>
 </html>
