--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>ลอยกระทงออนไลน์</title>
+    <title>ลอยกระทงออนไลน์ · ปลอดบุหรี่</title>
     <meta name="description" content="ลอยกระทงออนไลน์">
     <meta name="keywords" content="ลอยกระทง, Loy Krathong, Loy Krathong Online">
     <meta name="author" content="Manus">
@@ -272,7 +272,7 @@
         <div id="ui-container">
             <div class="header">
                 <div class="header-left">
-                    <img src="images/logo.png" alt="Loy Krathong Logo" class="header-logo">
+                    <button id="krathong-counter" class="btn">ลอยแล้ว 0 ใบ</button>
                 </div>
                 <div class="header-right">
                     <button id="btn-launch-header" class="btn">ปล่อยกระทง</button>
@@ -303,6 +303,6 @@
     <audio id="bg-music" loop></audio>
 
     <!-- The critical fix: New cache-busting version to force reload -->
-    <script src="main.js?v=20231103_8"></script>
+    <script src="main.js?v=20231103_9"></script>
 </body>
 </html>
