--- a/index.html
+++ b/index.html
@@ -93,12 +93,18 @@
             z-index: 1;
         }
 
-        /* FINAL FIX: Use only one background image as requested, and ensure path is correct */
-        #background {
-            background-image: url('images/bg5.png');
+        /* FINAL FIX: Use different background images for desktop and mobile as requested */
+        @media (max-width: 768px) {
+            #background {
+                background-image: url('images/bg5mb.png');
+            }
         }
 
-        /* Removed media queries for bg5mb.png as it was causing issues and user wants one responsive background */
+        @media (min-width: 769px) {
+            #background {
+                background-image: url('images/bg5.png');
+            }
+        }
 
         #canvas {
             position: absolute;
@@ -306,6 +312,6 @@
     <audio id="bg-music" loop></audio>
 
     <!-- The critical fix: New cache-busting version to force reload -->
-    <script src="main.js?v=20231103_11"></script>
+    <script src="main.js?v=20231103_13"></script>
 </body>
 </html>
