--- a/index.html
+++ b/index.html
@@ -9,12 +9,18 @@
     <meta name="author" content="Manus">
     <meta name="theme-color" content="#000000">
     <link rel="icon" href="images/logo.png">
+    <!-- FINAL FIX: Adding TH Sarabun New font via Google Fonts for Krathong wish text -->
+    <link href="https://fonts.googleapis.com/css2?family=Sarabun:wght@400;700&display=swap" rel="stylesheet">
     <style>
         @font-face {
             font-family: 'Chonburi';
             src: url('Chonburi-Regular.ttf') format('truetype');
             font-weight: normal;
             font-style: normal;
+        }
+        /* Fallback for TH Sarabun New */
+        .th-sarabun {
+            font-family: 'Sarabun', sans-serif;
         }
 
         body {
@@ -312,6 +318,6 @@
     <audio id="bg-music" loop></audio>
 
     <!-- The critical fix: New cache-busting version to force reload -->
-    <script src="main.js?v=20231103_15"></script>
+    <script src="main.js?v=20231103_16"></script>
 </body>
 </html>
